--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-ProductDetails.json
@@ -113,7 +113,10 @@
     "orBrowse": "أو انقر لتصفح الملفات",
     "maxFileSize": "الحد الأقصى لحجم الملف: 10 ميجابايت • المدعوم: JPG, PNG, PDF",
     "chooseFile": "اختر ملفًا",
-    "submit": "إرسال الشراء"
+    "submit": "إرسال الشراء",
+    "processingTimeTitle": "مدة المعالجة",
+    "processingTimeDesc": "بعد إرسال طلب الشراء الخاص بك، سيقوم فريقنا بمراجعة ومعالجة طلبك. يمكنك توقع الرد خلال ",
+    "hours": "ساعة في أوقات العمل"
   },
   "sample": {
     "noSample": "لا يوجد ملف عينة",
