--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -65,5 +65,6 @@
   "select": "اختر",
   "Create": "اضافة",
   "MyLectures": "محاضراتي",
-  "market": "المتجر"
+  "market": "المتجر",
+  "signedLecturers": "المعلمين الموقعين"
   }
