--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -65,5 +65,6 @@
   "Create": "Create",
   "MyLectures": "My Lectures",
   "storeDashboard": "Store Dashboard",
-  "market": "Market"
+  "market": "Market",
+  "signedLecturers": "Signed Lecturers"
 }
