--- a/kalima-platform/frontend/public/locales/ar/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/ar/promoCodes.json
@@ -23,6 +23,30 @@
       "invalidCode": "كود غير صالح"
     }
   },
+  "referral": {
+    "title": "كود الإحالة",
+    "completedTitle": "تم تطبيق الإحالة",
+    "used": "مستخدم",
+    "oneTime": "استخدام مرة واحدة",
+    "infoTitle": "هل لديك كود إحالة؟",
+    "infoDescription": "إذا أحالك شخص ما إلى منصتنا، أدخل الرقم التسلسلي للإحالة أدناه للحصول على نقاط مكافأة ومساعدتهم في كسب المكافآت أيضاً!",
+    "label": "الرقم التسلسلي للإحالة",
+    "required": "مطلوب",
+    "placeholder": "أدخل الرقم التسلسلي للإحالة (مثل REF123456)",
+    "button": "تطبيق",
+    "alreadyApplied": "لقد قمت بتطبيق كود الإحالة بنجاح!",
+    "referredBy": "أحالك:",
+    "benefitsTitle": "فوائد الإحالة",
+    "benefit1": "احصل على نقاط مكافأة عند تطبيق كود إحالة صحيح",
+    "benefit2": "ساعد صديقك في كسب المكافآت لإحالته لك",
+    "benefit3": "الاستخدام لمرة واحدة يضمن التوزيع العادل للمكافآت",
+    "success": "تم تطبيق كود الإحالة بنجاح! قد تحصل على نقاط مكافأة.",
+    "errors": {
+      "emptySerial": "يرجى إدخال الرقم التسلسلي للإحالة",
+      "alreadyUsed": "لقد استخدمت كود إحالة بالفعل",
+      "generic": "فشل في تطبيق كود الإحالة"
+    }
+  },
   "transactions": {
     "title": "تاريخ التعاملات",
     "types": {
