--- a/kalima-platform/frontend/public/locales/en/kalimaStore-Market.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-Market.json
@@ -12,7 +12,11 @@
   "sections": {
     "Designs": "Designs",
     "Books": "Books",
-    "default": "Section"
+    "default": "Section",
+    "Courses": "Courses",
+    "Gifts": "Gifts",
+    "Printing": "Printing",
+    "Software": "Software"
   },
   "product": {
     "discounts": "Discount",
