I LOST ALL MY MONEY GAMBILNG
HELP HELP HELP HELP HELP HELP HELP HELP HELP HELP HELP HELP

--- a/kalima-platform/frontend/public/locales/ar/admin.json
+++ b/kalima-platform/frontend/public/locales/ar/admin.json
@@ -128,6 +128,8 @@
       "subtitle": "عرض وتتبع جميع الأنشطة على النظام",
       "search": "البحث في سجل العمليات...",
       "noRecords": "لا توجد سجلات متاحة",
+      "noRecordsFiltered": "لا توجد سجلات عمليات تطابق المرشحات الحالية. جرب تعديل معايير البحث.",
+      "noRecordsYet": "لم يتم تسجيل أي سجلات عمليات بعد. ستظهر الأنشطة هنا بمجرد بدء المستخدمين التفاعل مع النظام.",
       
       "filters": {
         "all": "الكل",
@@ -198,6 +200,34 @@
       "pagination": {
         "previous": "السابق",
         "next": "التالي"
+      },
+
+      "export": {
+        "export": "تصدير السجلات",
+        "exporting": "جاري التصدير...",
+        "csvFormat": "تنسيق CSV",
+        "jsonFormat": "تنسيق JSON",
+        "exportFiltered": "تصدير العرض الحالي",
+        "exportAll": "تصدير جميع السجلات",
+        "noData": "لا توجد بيانات للتصدير",
+        "successAll": "تم تصدير {{count}} سجل عمليات بنجاح",
+        "successFiltered": "تم تصدير {{count}} سجل عمليات مفلتر بنجاح",
+        "error": "فشل في تصدير سجلات العمليات. يرجى المحاولة مرة أخرى.",
+        "filterInfo": "المرشحات المطبقة:",
+        "showing": "عرض",
+        "logs": "سجلات عمليات",
+        "of": "من",
+        "totalLogs": "إجمالي السجلات المعروضة",
+        "user": "المستخدم",
+        "role": "الصلاحية",
+        "action": "الإجراء",
+        "resource": "العنصر",
+        "resourceDetails": "تفاصيل العنصر",
+        "status": "الحالة",
+        "timestamp": "الطابع الزمني",
+        "ipAddress": "عنوان IP",
+        "userAgent": "وكيل المستخدم",
+        "description": "الوصف"
       }
     }
     },
