--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -53,6 +53,7 @@
       "points": "Points",
       "userManagement": {
         "title": "User Actions Log",
+        "subtitle": "Manage and export user data",
         "createUser": "Create New User",
         "delete": "Delete",
         "edit": "Edit"
@@ -199,31 +200,27 @@
       },
 
       "export": {
-        "export": "Export Logs",
+        "export": "Export",
         "exporting": "Exporting...",
         "csvFormat": "CSV Format",
         "jsonFormat": "JSON Format",
-        "exportFiltered": "Export Current View",
-        "exportAll": "Export All Logs",
-        "noData": "No data to export",
-        "successAll": "Successfully exported {{count}} audit logs",
-        "successFiltered": "Successfully exported {{count}} filtered audit logs",
-        "error": "Failed to export audit logs. Please try again.",
+        "exportFiltered": "Export Filtered",
+        "exportAll": "Export All",
+        "successAll": "Successfully exported {{count}} users",
+        "successFiltered": "Successfully exported {{count}} filtered users",
+        "error": "Failed to export users. Please try again.",
         "filterInfo": "Filters applied:",
-        "showing": "Showing",
-        "logs": "audit logs",
         "of": "of",
-        "totalLogs": "total logs shown",
-        "user": "User",
+        "usersShown": "users shown",
+        "name": "Name",
+        "email": "Email",
+        "phone": "Phone Number",
         "role": "Role",
-        "action": "Action",
-        "resource": "Resource",
-        "resourceDetails": "Resource Details",
         "status": "Status",
-        "timestamp": "Timestamp",
-        "ipAddress": "IP Address",
-        "userAgent": "User Agent",
-        "description": "Description"
+        "government": "Government",
+        "administrationZone": "Administration Zone",
+        "sequenceId": "Sequence ID",
+        "joinedDate": "Joined Date"
       }
     }
   },
@@ -276,6 +273,43 @@
   "modals" : {
         "confirmDelete": "delete this code?",
         "deleteCodeConfirm": "Are you sure you want to delete this code?"
+  },
+  "noPhoneNumber": "No phone number available",
+  "noUsers": "No users found",
+  "noUsersFiltered": "No users match your current filters. Try adjusting your search criteria.",
+  "noUsersYet": "No users have registered yet. Check back later.",
+  "invites": {
+    "invite": "invite",
+    "invites": "invites"
+  },
+  "actions": {
+    "delete": "Delete",
+    "edit": "Edit",
+    "cancel": "Cancel",
+    "whatsapp": "Send WhatsApp message"
+  },
+  "export": {
+    "export": "Export",
+    "exporting": "Exporting...",
+    "csvFormat": "CSV Format",
+    "jsonFormat": "JSON Format",
+    "exportFiltered": "Export Filtered",
+    "exportAll": "Export All",
+    "successAll": "Successfully exported {{count}} users",
+    "successFiltered": "Successfully exported {{count}} filtered users",
+    "error": "Failed to export users. Please try again.",
+    "filterInfo": "Filters applied:",
+    "of": "of",
+    "usersShown": "users shown",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone Number",
+    "role": "Role",
+    "status": "Status",
+    "government": "Government",
+    "administrationZone": "Administration Zone",
+    "sequenceId": "Sequence ID",
+    "joinedDate": "Joined Date"
   }
 }
   
