--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -66,5 +66,7 @@
   "Create": "اضافة",
   "MyLectures": "محاضراتي",
   "market": "المتجر",
-  "signedLecturers": "المعلمين الموقعين"
+  "signedLecturers": "المعلمين الموقعين",
+  "Analytics": "التحليلات"
+
   }
