--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -66,5 +66,6 @@
   "MyLectures": "My Lectures",
   "storeDashboard": "Store Dashboard",
   "market": "Market",
-  "signedLecturers": "Signed Lecturers"
+  "signedLecturers": "Signed Lecturers",
+  "Analytics": "Analytics"
 }
