when i thought i was out they pulled me back in

--- a/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-orders.json
@@ -2,6 +2,9 @@
   "errorLoadingOrders": "Error Loading Orders",
   "retry": "Retry",
   "ordersManagement": "Orders Management",
+  "loading": "Loading orders...",
+  "noOrdersFound": "No orders found matching your criteria",
+  "noOrdersAvailable": "No orders available",
   "stats": {
     "totalOrders": "Total Orders",
     "confirmed": "Confirmed",
@@ -26,6 +29,7 @@
     "price": "Price",
     "transferFrom": "Transfer From",
     "status": "Status",
+    "notes": "Notes",
     "date": "Date",
     "actions": "Actions",
     "confirmed": "Confirmed",
@@ -34,7 +38,10 @@
     "book": "Book",
     "productType": "Product",
     "viewDetails": "View Details",
+    "viewEditNotes": "View/Edit Notes",
+    "addNotes": "Add Notes",
     "viewPaymentScreenshot": "View Payment Screenshot",
+    "contactWhatsApp": "Contact via WhatsApp",
     "confirmOrder": "Confirm Order",
     "noOrdersFound": "No orders found",
     "tryAdjustingSearch": "Try adjusting your search or filter criteria",
@@ -51,6 +58,7 @@
     "email": "Email",
     "role": "Role",
     "productInfo": "Product Information",
+    "customerNotes": "Customer Notes",
     "paymentInfo": "Payment Information",
     "paymentNumber": "Payment Number",
     "transferredFrom": "Transferred From",
@@ -58,13 +66,24 @@
     "nameOnBook": "Name on Book",
     "numberOnBook": "Number on Book",
     "seriesName": "Series Name",
-    "statusInfo": "Status Information",
-    "created": "Created",
-    "confirmedBy": "Confirmed by",
+    "adminNotes": "Admin Notes",
+    "notesLabel": "Notes for this order",
+    "characters": "characters",
+    "notesPlaceholder": "Add notes about this order...",
+    "unsavedChanges": "You have unsaved changes",
+    "cancel": "Cancel",
+    "saving": "Saving...",
+    "saveNotes": "Save Notes",
+    "edit": "Edit",
+    "noNotes": "No notes",
+    "noAdminNotes": "No admin notes added yet",
     "close": "Close"
   },
   "alerts": {
     "orderConfirmed": "Order confirmed successfully!",
-    "failedToConfirm": "Failed to confirm order: "
+    "failedToConfirm": "Failed to confirm order: ",
+    "notesSaved": "Notes saved successfully!",
+    "failedToSaveNotes": "Failed to save notes: ",
+    "unsavedChanges": "You have unsaved changes. Are you sure you want to close?"
   }
 } 
