--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-orders.json
@@ -2,6 +2,9 @@
   "errorLoadingOrders": "خطأ في تحميل الطلبات",
   "retry": "إعادة المحاولة",
   "ordersManagement": "إدارة الطلبات",
+  "loading": "جاري تحميل الطلبات...",
+  "noOrdersFound": "لم يتم العثور على طلبات تطابق معاييرك",
+  "noOrdersAvailable": "لا توجد طلبات متاحة",
   "stats": {
     "totalOrders": "إجمالي الطلبات",
     "confirmed": "تم التأكيد",
@@ -26,6 +29,7 @@
     "price": "السعر",
     "transferFrom": "تم التحويل من",
     "status": "الحالة",
+    "notes": "الملاحظات",
     "date": "التاريخ",
     "actions": "الإجراءات",
     "confirmed": "تم التأكيد",
@@ -34,7 +38,10 @@
     "book": "كتاب",
     "productType": "منتج",
     "viewDetails": "عرض التفاصيل",
+    "viewEditNotes": "عرض/تعديل الملاحظات",
+    "addNotes": "إضافة ملاحظات",
     "viewPaymentScreenshot": "عرض صورة الدفع",
+    "contactWhatsApp": "التواصل عبر واتساب",
     "confirmOrder": "تأكيد الطلب",
     "noOrdersFound": "لم يتم العثور على طلبات",
     "tryAdjustingSearch": "حاول تعديل معايير البحث أو التصفية",
@@ -51,6 +58,7 @@
     "email": "البريد الإلكتروني",
     "role": "الدور",
     "productInfo": "معلومات المنتج",
+    "customerNotes": "ملاحظات العميل",
     "paymentInfo": "معلومات الدفع",
     "paymentNumber": "رقم الدفع",
     "transferredFrom": "تم التحويل من",
@@ -58,13 +66,24 @@
     "nameOnBook": "الاسم على الكتاب",
     "numberOnBook": "الرقم على الكتاب",
     "seriesName": "اسم السلسلة",
-    "statusInfo": "معلومات الحالة",
-    "created": "تاريخ الإنشاء",
-    "confirmedBy": "تم التأكيد بواسطة",
+    "adminNotes": "ملاحظات المدير",
+    "notesLabel": "ملاحظات لهذا الطلب",
+    "characters": "أحرف",
+    "notesPlaceholder": "أضف ملاحظات حول هذا الطلب...",
+    "unsavedChanges": "لديك تغييرات غير محفوظة",
+    "cancel": "إلغاء",
+    "saving": "جاري الحفظ...",
+    "saveNotes": "حفظ الملاحظات",
+    "edit": "تعديل",
+    "noNotes": "لا توجد ملاحظات",
+    "noAdminNotes": "لم يتم إضافة ملاحظات مدير بعد",
     "close": "إغلاق"
   },
   "alerts": {
     "orderConfirmed": "تم تأكيد الطلب بنجاح!",
-    "failedToConfirm": "فشل في تأكيد الطلب: "
+    "failedToConfirm": "فشل في تأكيد الطلب: ",
+    "notesSaved": "تم حفظ الملاحظات بنجاح!",
+    "failedToSaveNotes": "فشل في حفظ الملاحظات: ",
+    "unsavedChanges": "لديك تغييرات غير محفوظة. هل أنت متأكد من أنك تريد الإغلاق؟"
   }
 } 
