--- a/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
+++ b/kalima-platform/frontend/public/locales/ar/kalimaStore-analytics.json
@@ -41,6 +41,7 @@
     "revenue": "الإيرادات",
     "confirmedRevenue": "الإيرادات المؤكدة",
     "noData": "لا توجد بيانات",
-    "tryAdjustingFilters": "جرب تعديل المرشحات"
+    "tryAdjustingFilters": "جرب تعديل المرشحات",
+    "totalCouponValue": "قيمة الكوبون الإجمالية"
   }
 } 
