--- a/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
@@ -129,7 +129,9 @@
     "priceSummary": "Price Summary",
     "originalPrice": "Original Price",
     "discount": "Discount",
-    "total": "Total"
+    "total": "Total",
+    "notes": "Notes",
+    "notesPlaceholder": "Enter notes"
   },
   "sample": {
     "noSample": "No Sample Available",
